src/objects/ContextAction__mdt.object
<CustomObject>
    <description>Junction metadata object that relates Action with Context.</description>
    <fields>
        <fullName>Action__c</fullName>
        <description>The Action to related to a Context.</description>
        <inlineHelpText>The Action to related to a Context.</inlineHelpText>
        <label>Action</label>
        <referenceTo>Action__mdt</referenceTo>
        <relationshipLabel>Context Actions</relationshipLabel>
        <relationshipName>ContextActions</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Context__c</fullName>
        <description>The Context where the Action is available.</description>
        <inlineHelpText>The Context where the Action is available.</inlineHelpText>
        <label>Context</label>
        <referenceTo>Context__mdt</referenceTo>
        <relationshipLabel>Context Actions</relationshipLabel>
        <relationshipName>ContextActions</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>The order of the action.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Context Action</label>
    <pluralLabel>Context Actions</pluralLabel>
</CustomObject>